set fixed height on accordion expanding to be able to animate. overflow-y: auto for scrolling

--- a/code/style.css
+++ b/code/style.css
@@ -41,6 +41,7 @@ body {
   left: 0;
   margin-left: 20px;
 }
+
 .header__buzz--right {
   right: 0;
   margin-right: 20px;
@@ -75,7 +76,7 @@ body {
 }
 
 .header__img--hidden-mobile {
-display: block;
+  display: block;
 }
 
 .header__img--xs {
@@ -96,7 +97,7 @@ display: block;
   animation-timing-function: linear;
 }
 
-.header__img--animation-up  {
+.header__img--animation-up {
   animation-name: slideup;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
@@ -107,7 +108,7 @@ display: block;
 }
 
 .header__img--animation-short {
-  animation-duration: 10s; 
+  animation-duration: 10s;
 }
 
 /*animation for images to slideup of the header */
@@ -188,7 +189,7 @@ display: block;
 
   20% {
     content: "Nano | Colors";
-    color:rgb(41, 41, 160);
+    color: rgb(41, 41, 160);
   }
 
   30% {
@@ -226,13 +227,13 @@ display: block;
   background: white;
   justify-content: space-evenly;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color:rgb(46, 157, 165);
+  color: rgb(46, 157, 165);
   padding: 0;
   margin: 0;
 }
 
 .nav a:hover {
-  background:rgb(143, 125, 173);
+  background: rgb(143, 125, 173);
   color: white;
 }
 
@@ -286,10 +287,11 @@ display: block;
   border-radius: 10px;
   margin-top: 5px;
   color: white;
+
 }
 
-.signup__form input[type="submit"]{
-  background:rgb(76, 63, 136);
+.signup__form input[type="submit"] {
+  background: rgb(76, 63, 136);
   font-size: 18px;
   margin-bottom: 20px;
 }
@@ -297,6 +299,11 @@ display: block;
 .signup__row {
   width: 80%;
   margin: 5px 20px;
+
+}
+
+.signup__row__option label {
+  background-color:rgb(41, 41, 160);
 }
 
 .signup__image {
@@ -323,7 +330,7 @@ display: block;
 /*hides image on mobile mode thats only used for desktop viewing */
 .signup__image--hidden-mobile {
   display: block;
-  }
+}
 
 .accordion {
   margin: 40px 0;
@@ -342,17 +349,18 @@ display: block;
   background-color: rgb(109, 96, 160);
 }
 
-.accordion h2, .accordion p {
+.accordion h2,
+.accordion p {
   margin-left: 30px;
 }
 
-.accordion h2{
+.accordion h2 {
   text-align: center;
 }
 
 .accordion__display {
   margin: 10px;
-  border:solid rgb(255, 255, 255) 0.5px;
+  border: solid rgb(255, 255, 255) 0.5px;
   background-color: rgb(76, 63, 136);
   border-radius: 10px;
   display: flex;
@@ -372,7 +380,7 @@ display: block;
   border-radius: 50%;
   box-shadow: 1px 1px 2px 1px rgb(24, 14, 37);
   text-align: center;
-  background-color:rgb(62, 54, 109);
+  background-color: rgb(62, 54, 109);
 }
 
 .accordion__button:active {
@@ -383,14 +391,15 @@ display: block;
 .accordion__expand {
   height: 0;
   visibility: hidden;
-  border:solid rgb(255, 255, 255) 0.5px;
-  background-color:rgb(76, 63, 136);
+  border: solid rgb(255, 255, 255) 0.5px;
+  background-color: rgb(76, 63, 136);
   border-radius: 10px;
 }
 
 .accordion__expand--selected {
   height: 200px;
   margin: 10px;
+  overflow-y: overflow;
   transition: height 0.5s ease-in-out;
   visibility: visible;
 }
@@ -465,6 +474,7 @@ display: block;
   .header__img--hidden-mobile {
     display: none;
   }
+
   .header__img--hidden-desktop {
     display: block;
   }
@@ -484,19 +494,19 @@ display: block;
   }
 
   /*puts the form image on top instead of bottom of the form */
-  .signup__image--landscape{
+  .signup__image--landscape {
     width: 100%;
     height: 100px;
   }
 
   .signup__image--flex-first {
-    order:1;
+    order: 1;
   }
 
   .signup__image--hidden-mobile {
     display: none;
-    }
-  
+  }
+
   .signup__image--hidden-desktop {
     display: block;
   }
@@ -509,7 +519,7 @@ display: block;
   }
 
   /* makes sure there's no margin between the two form classes */
-  .signup__form:nth-of-type(2){
+  .signup__form:nth-of-type(2) {
     margin-top: 0;
     margin-bottom: 20px;
   }
